nobase_include_HEADERS=\
	unavi/UNaviCommon.h\
	unavi/core/UCoreException.h\
	unavi/core/UNaviCycle.h\
	unavi/core/UNaviEvent.h\
	unavi/core/UNaviHandler.h\
	unavi/core/UNaviHandlerPipe.h\
	unavi/core/UNaviHandlerSPipe.h\
	unavi/core/UNaviIOSvc.h\
	unavi/core/UNaviLog.h\
	unavi/core/UNaviPollEpoll.h\
	unavi/core/UNaviPoll.h\
	unavi/core/UNaviPollSelect.h\
	unavi/core/UNaviProtoDeclare.h\
	unavi/core/UNaviProto.h\
	unavi/core/UNaviUDPPacket.h\
	unavi/core/UNaviUDPPipe.h\
	unavi/core/UNaviWorker.h\
	unavi/rtmfp/URtmfpChunk.h\
	unavi/rtmfp/URtmfpCommon.h\
	unavi/rtmfp/URtmfpDebugHand.h\
	unavi/rtmfp/URtmfpDebugHandChunk.h\
	unavi/rtmfp/URtmfpDebugProto.h\
	unavi/rtmfp/URtmfpException.h\
	unavi/rtmfp/URtmfpFlowChunk.h\
	unavi/rtmfp/URtmfpFlow.h\
	unavi/rtmfp/URtmfpIflow.h\
	unavi/rtmfp/URtmfpMsg.h\
	unavi/rtmfp/URtmfpOflow.h\
	unavi/rtmfp/URtmfpPacket.h\
	unavi/rtmfp/URtmfpPeerId.h\
	unavi/rtmfp/URtmfpSessionChunk.h\
	unavi/rtmfp/URtmfpSession.h\
	unavi/rtmfp/URtmfpUtil.h\
	unavi/util/UNaviException.h\
	unavi/util/UNaviListable.h\
	unavi/util/UNaviLock.h\
	unavi/util/UNaviRef.h\
	unavi/util/UNaviRWLock.h\
	unavi/util/UNaviThread.h\
	unavi/util/UNaviUtil.h\
	unavi/frame/UOMBCmd.h\
	unavi/frame/UOMBCommon.h\
	unavi/frame/UOMBException.h\
	unavi/frame/UOMBObj.h\
	unavi/frame/UOMBPeer.h\
	unavi/frame/UOMBPeerSvc.h\
	unavi/frame/UOMBProxy.h\
	unavi/frame/UOMBServant.h\
	unavi/frame/UOMBSign.h\
	unavi/ujom/UJOMBaseSvc.h\
	unavi/ujom/UJOMCommon.h\
	unavi/ujom/UJOMFlashStyle.h\
	unavi/ujom/UJOMPeer.h\
	#unavi/rtmfp/URtmfpHandChunk.h\
	#unavi/rtmfp/URtmfpProto.h\
	#unavi/rtmfp/URtmfpHandshake.h\
	#end
