lib_LTLIBRARIES= libunavi.la

AM_CPPFLAGS = -I${top_srcdir}/include/

libunavi_la_SOURCES=\
	${top_srcdir}/include/unavi/UNaviCommon.h\
	${top_srcdir}/include/unavi/core/UCoreException.h\
	${top_srcdir}/include/unavi/core/UNaviCycle.h\
	${top_srcdir}/include/unavi/core/UNaviEvent.h\
	${top_srcdir}/include/unavi/core/UNaviHandler.h\
	${top_srcdir}/include/unavi/core/UNaviHandlerPipe.h\
	${top_srcdir}/include/unavi/core/UNaviHandlerSPipe.h\
	${top_srcdir}/include/unavi/core/UNaviIOSvc.h\
	${top_srcdir}/include/unavi/core/UNaviLog.h\
	${top_srcdir}/include/unavi/core/UNaviPollEpoll.h\
	${top_srcdir}/include/unavi/core/UNaviPoll.h\
	${top_srcdir}/include/unavi/core/UNaviPollSelect.h\
	${top_srcdir}/include/unavi/core/UNaviProtoDeclare.h\
	${top_srcdir}/include/unavi/core/UNaviProto.h\
	${top_srcdir}/include/unavi/core/UNaviUDPPacket.h\
	${top_srcdir}/include/unavi/core/UNaviUDPPipe.h\
	${top_srcdir}/include/unavi/core/UNaviWorker.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpChunk.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpCommon.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpDebugHand.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpDebugHandChunk.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpDebugProto.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpException.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpFlowChunk.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpFlow.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpIflow.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpMsg.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpOflow.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpPacket.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpPeerId.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpSessionChunk.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpSession.h\
	${top_srcdir}/include/unavi/rtmfp/URtmfpUtil.h\
	${top_srcdir}/include/unavi/util/UNaviException.h\
	${top_srcdir}/include/unavi/util/UNaviListable.h\
	${top_srcdir}/include/unavi/util/UNaviLock.h\
	${top_srcdir}/include/unavi/util/UNaviRef.h\
	${top_srcdir}/include/unavi/util/UNaviRWLock.h\
	${top_srcdir}/include/unavi/util/UNaviThread.h\
	${top_srcdir}/include/unavi/util/UNaviUtil.h\
	${top_srcdir}/include/unavi/frame/UOMBCmd.h\
	${top_srcdir}/include/unavi/frame/UOMBCommon.h\
	${top_srcdir}/include/unavi/frame/UOMBException.h\
	${top_srcdir}/include/unavi/frame/UOMBObj.h\
	${top_srcdir}/include/unavi/frame/UOMBPeer.h\
	${top_srcdir}/include/unavi/frame/UOMBPeerApp.h\
	${top_srcdir}/include/unavi/frame/UOMBPeerSvc.h\
	${top_srcdir}/include/unavi/frame/UOMBProxy.h\
	${top_srcdir}/include/unavi/frame/UOMBServant.h\
	${top_srcdir}/include/unavi/frame/UOMBSign.h\
	${top_srcdir}/include/unavi/ujom/UJOMBaseSvc.h\
	${top_srcdir}/include/unavi/ujom/UJOMPeer.h\
	${top_srcdir}/include/unavi/ujom/UJOMFlashStyle.h\
	${top_srcdir}/include/unavi/ujom/UJOMCommon.h\
	core/UCoreException.cpp\
	core/UNaviCycle.cpp\
	core/UNaviEvent.cpp\
	core/UNaviHandler.cpp\
	core/UNaviHandlerPipe.cpp\
	core/UNaviHandlerSPipe.cpp\
	core/UNaviIOSvc.cpp\
	core/UNaviLog.cpp\
	core/UNaviPoll.cpp\
	core/UNaviPollEpoll.cpp\
	core/UNaviPollSelect.cpp\
	core/UNaviProtoDeclare.cpp\
	core/UNaviUDPPacket.cpp\
	core/UNaviUDPPipe.cpp\
	core/UNaviWorker.cpp\
	rtmfp/URtmfpChunk.cpp\
	rtmfp/URtmfpDebugHand.cpp\
	rtmfp/URtmfpDebugHandChunk.cpp\
	rtmfp/URtmfpDebugProto.cpp\
	rtmfp/URtmfpUtil.cpp\
	rtmfp/URtmfpFlowChunk.cpp\
	rtmfp/URtmfpIflow.cpp\
	rtmfp/URtmfpMsg.cpp\
	rtmfp/URtmfpOflow.cpp\
	rtmfp/URtmfpPacket.cpp\
	rtmfp/URtmfpPeerId.cpp\
	rtmfp/URtmfpSessionChunk.cpp\
	rtmfp/URtmfpSession.cpp\
	util/UNaviException.cpp\
	util/UNaviListable.cpp\
	util/UNaviLock.cpp\
	util/UNaviRWLock.cpp\
	util/UNaviThread.cpp\
	util/UNaviUtil.cpp\
	frame/UOMBException.cpp\
	frame/UOMBObj.cpp\
	frame/UOMBPeer.cpp\
	frame/UOMBPeerSvc.cpp\
	frame/UOMBSign.cpp\
	frame/UOMBPeerRunMgr.cpp\
	frame/UOMBPeerRunMgr.h\
	ujom/UJOMBaseSvc.cpp\
	ujom/UJOMFlashStyle.cpp\
	ujom/UJOMPeer.cpp\
	#rtmfp/URtmfpProto.cpp\
	#${top_srcdir}/include/unavi/rtmfp/URtmfpHandChunk.h\
	#${top_srcdir}/include/unavi/rtmfp/URtmfpHandshake.h\
	#${top_srcdir}/include/unavi/rtmfp/URtmfpProto.h\
	#rtmfp/URtmfpHandshake.cpp\
	#end

libunavi_la_LIBADD= @jansson_LIBS@ -ldl -lpthread
libunavi_la_CPPFLAGS = ${AM_CPPFLAGS}\
	@jansson_CFLAGS@ -Wno-deprecated -Wno-invalid-offsetof
libunavi_la_LDFLAGS=-version-info @LIBUNAVI_VERSION@
